# store

./: .gitignore  CHANGELOG.md  build.sh  modelyz-store.cabal  rundev.sh  store.cabal
src/: Main.hs  Message.hs  MessageStore.hs
