cabal-version:      3.4
name:               modelyz-store
version:            0.1.0.0
synopsis: Modelyz microservice serving the main event store
-- description:
-- bug-reports:
license: AGPL-3.0-or-later
author:             Christophe Combelles
maintainer:         ccomb@free.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/Modelyz/store

executable store
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Message
      MessageStore

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -Wall
    build-depends:
        base >=4.16
        , aeson >= 2.1
        , bytestring
        , containers
        , http-types
        , optparse-applicative
        , scientific
        , text
        , time
        , unordered-containers
        , uuid
        , vector
        , wai
        , wai-websockets
        , warp
        , websockets
    hs-source-dirs:   src
    default-language: Haskell2010
