cabal-version:      3.4
name:               modelyz-store
version:            0.1.0.0
synopsis: Main event store for Modelyz
-- description:
-- bug-reports:
license: AGPL-3.0-or-later
license-file:        LICENSE
author:              Christophe Combelles
maintainer:          ccomb@free.fr
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/Modelyz/store

executable store
    main-is:          Main.hs
    hs-source-dirs:   src
    ghc-options: -Wall
    build-depends:
        base >=4.16
        , aeson >= 2.1
        , bytestring
        , containers
        , http-types
        , modelyz-message
        , optparse-applicative
        , scientific
        , text
        , time
        , unordered-containers
        , uuid
        , vector
        , wai
        , wai-websockets
        , warp
        , websockets
    default-language: GHC2021
